--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <li>Test will open in <b>fullscreen</b> — do not exit fullscreen.</li>
       <li>Exiting fullscreen will <b>cancel your test</b> and make you ineligible for certificate.</li>
       <li>You must answer at least <b>15 out of 20</b> questions correctly to qualify.</li>
-      <li>Certificate will be sent via email <b>only after payment</b>.</li>
+      <li>Certificate will be sent via email <b>in 1-2 working days.</b>.</li>
     </ul>
     <label>Full Name</label>
     <input type="text" id="name" required />
