--- a/index.html
+++ b/index.html
@@ -2,294 +2,215 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>MeckTech Assessment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>MeckTech Assessment</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #121212;
-      color: white;
+      background-color: #0d0d0d;
+      color: #f1f1f1;
     }
-    .container {
-      max-width: 700px;
-      margin: auto;
-      padding: 2rem;
+    .centered {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+      padding: 20px;
     }
-    input, textarea {
-      width: 100%;
-      padding: 0.8rem;
-      margin-top: 0.5rem;
+    input, button {
+      padding: 12px;
+      margin: 10px;
+      font-size: 16px;
       border: none;
       border-radius: 5px;
-      background-color: #1e1e1e;
-      color: white;
     }
     button {
-      padding: 0.8rem 2rem;
-      margin-top: 1rem;
-      background-color: #03dac5;
-      color: black;
+      background: #00ffc8;
+      color: #000;
       font-weight: bold;
-      border: none;
-      border-radius: 5px;
       cursor: pointer;
     }
-    .hidden { display: none; }
     .question-box {
-      margin-top: 2rem;
-      background: #1e1e1e;
-      padding: 1rem;
-      border-radius: 8px;
+      background: #1a1a1a;
+      padding: 25px;
+      border-radius: 10px;
+      width: 95%;
+      max-width: 600px;
+      margin: 20px 0;
     }
-    label { display: block; margin-top: 1rem; }
-    .options label { margin: 0.5rem 0; display: block; }
-    #result { font-size: 1.5rem; margin-top: 2rem; }
-    #fullscreen-warning {
-      color: red;
-      margin-top: 1rem;
-      font-weight: bold;
+    .option {
+      background: #333;
+      margin: 10px 0;
+      padding: 12px;
+      border-radius: 6px;
+      text-align: left;
+      cursor: pointer;
     }
-    .strike { text-decoration: line-through; color: grey; }
+    .option:hover {
+      background: #555;
+    }
+    #contact {
+      margin-top: 20px;
+      font-size: 13px;
+      color: #999;
+    }
+    a { color: #00ffe0; text-decoration: none; }
   </style>
 </head>
 <body>
 
-<!-- Branding -->
-<div style="text-align:center; margin-top: 20px;">
-  <img id="brandLogo" src="" style="max-height:80px; display:none;" />
-  <h1 id="brandName">Loading...</h1>
-</div>
-
-<div class="container">
-  <div id="start-section">
-    <h2>Welcome to MeckTech CS/AI-ML Assessment</h2>
-    <p><b>Instructions:</b></p>
-    <ul>
-      <li>Test will open in <b>fullscreen</b> — do not exit fullscreen.</li>
-      <li>Exiting fullscreen will <b>cancel your test</b> and make you ineligible for certificate.</li>
-      <li>You must answer at least <b>15 out of 20</b> questions correctly to qualify.</li>
-      <li>Certificate will be sent via email <b>in 1-2 working days.</b>.</li>
-    </ul>
-    <label>Full Name</label>
-    <input type="text" id="name" required />
-    <label>Email</label>
-    <input type="email" id="email" required />
-    <label>Address</label>
-    <textarea id="address" required></textarea>
-    <button onclick="startTest()">Start Assessment</button>
-  </div>
-
-  <div id="quiz-section" class="hidden">
-    <div id="question-box" class="question-box"></div>
-    <button onclick="nextQuestion()">Next</button>
-    <p id="fullscreen-warning" class="hidden">⚠️ You exited fullscreen. Test cancelled.</p>
-  </div>
-
-  <div id="result-section" class="hidden">
-    <h2>Test Complete</h2>
-    <div id="result"></div>
-    <div id="payment-section" class="hidden">
-      <p>To receive your certificate, please make payment of:
-        <span class="strike">₹249</span> <b>₹149</b> only.
-      </p>
-      <button onclick="payNow()">Pay & Get Certificate</button>
-    </div>
-    <div id="success-message" class="hidden">
-      <h3>✅ Payment Successful</h3>
-      <p>Your certificate will be sent to your email shortly.</p>
-      <small>MeckTech doesn't claim any partnership with any other company, this assessment is based on your personal knowledge about CS/Ai-ML course. We hope our certificate helps you in future, All the best.</small>
-    </div>
+<!-- Welcome/Launch Page -->
+<div id="launchPage" class="centered">
+  <h2>Welcome to MeckTech Assessment</h2>
+  <p><strong>Instructions:</strong></p>
+  <ul style="text-align: left; max-width: 500px;">
+    <li>The test has 20 questions, one at a time.</li>
+    <li>Fullscreen is required. Exiting will cancel your test.</li>
+    <li>Minimum 15 (75%) correct answers are needed for certificate eligibility.</li>
+  </ul>
+  <input type="text" id="fullName" placeholder="Your Full Name" required />
+  <input type="email" id="email" placeholder="Your Email" required />
+  <input type="text" id="address" placeholder="Your Address" required />
+  <button onclick="startTest()">Start Assessment</button>
+  <div id="contact">
+    Contact: <a href="mailto:royalmanagement02@gmail.com">royalmanagement02@gmail.com</a>
   </div>
 </div>
 
-<script>
-let questions = [];
-let currentIndex = 0;
-let correctAnswers = 0;
-let userName = "";
-let userEmail = "";
-let userScore = 0;
+<!-- Quiz Section -->
+<div id="quizContainer" class="centered" style="display:none;">
+  <div class="question-box" id="questionContainer"></div>
+</div>
 
-async function loadBranding() {
-  try {
-    const res = await fetch("https://raw.githubusercontent.com/mayankchavan13/MeckTech-site-admin/main/branding.json");
-    const data = await res.json();
-    if (data.name) document.getElementById("brandName").innerText = data.name;
-    if (data.logo) {
-      const img = document.getElementById("brandLogo");
-      img.src = data.logo;
-      img.style.display = "inline-block";
-    }
-  } catch (e) {
-    console.error("❌ Branding load failed:", e);
-  }
-}
-loadBranding();
+<!-- Result Section -->
+<div id="resultPage" class="centered" style="display:none;">
+  <h2 id="scoreMsg"></h2>
+  <div id="payButton" style="display:none;">
+    <p>Get your verified certificate for <b>₹149</b></p>
+    <button onclick="payNow()">Pay Now</button>
+  </div>
+  <div id="finalMsg"></div>
+</div>
 
-async function loadQuestions() {
-  try {
-    const res = await fetch("https://raw.githubusercontent.com/mayankchavan13/MeckTech-site-admin/main/questions.json");
-    const data = await res.json();
-    questions = shuffle(data).slice(0, 20);
-    showQuestion();
-  } catch (err) {
-    alert("❌ Failed to load questions. Please try again.");
-    console.error(err);
-  }
-}
-
-function shuffle(array) {
-  return array.sort(() => Math.random() - 0.5);
-}
-
-function startTest() {
-  userName = document.getElementById("name").value.trim();
-  userEmail = document.getElementById("email").value.trim();
-  const userAddress = document.getElementById("address").value.trim();
-  if (!userName || !userEmail || !userAddress) {
-    alert("Please fill all required details.");
-    return;
-  }
-  document.getElementById("start-section").classList.add("hidden");
-  document.getElementById("quiz-section").classList.remove("hidden");
-  launchFullscreen(document.documentElement);
-  loadQuestions();
-}
-
-function showQuestion() {
-  if (currentIndex >= questions.length) {
-    endTest();
-    return;
-  }
-  const q = questions[currentIndex];
-  const container = document.getElementById("question-box");
-  container.innerHTML = `
-    <p><b>Q${currentIndex + 1}:</b> ${q.question}</p>
-    <div class="options">
-      ${["A", "B", "C", "D"].map((opt, i) => `
-        <label><input type="radio" name="option" value="${opt}" /> ${opt}: ${q.options[i]}</label>
-      `).join("")}
-    </div>
-  `;
-}
-
-function nextQuestion() {
-  const selected = document.querySelector("input[name='option']:checked");
-  if (!selected) {
-    alert("Please select an option.");
-    return;
-  }
-  if (selected.value === questions[currentIndex].correct) {
-    correctAnswers++;
-  }
-  currentIndex++;
-  showQuestion();
-}
-
-function endTest() {
-  userScore = correctAnswers;
-  exitFullscreen();
-  document.getElementById("quiz-section").classList.add("hidden");
-  document.getElementById("result-section").classList.remove("hidden");
-  document.getElementById("result").innerText = `You got ${correctAnswers} out of 20 correct.`;
-  if (correctAnswers >= 15) {
-    document.getElementById("payment-section").classList.remove("hidden");
-  }
-}
-
-// Fullscreen cancel
-function launchFullscreen(element) {
-  if (element.requestFullscreen) {
-    element.requestFullscreen();
-  } else if (element.webkitRequestFullscreen) {
-    element.webkitRequestFullscreen();
-  } else if (element.msRequestFullscreen) {
-    element.msRequestFullscreen();
-  }
-}
-function exitFullscreen() {
-  if (document.exitFullscreen) {
-    document.exitFullscreen();
-  } else if (document.webkitExitFullscreen) {
-    document.webkitExitFullscreen();
-  }
-}
-document.addEventListener("fullscreenchange", checkFullscreen);
-document.addEventListener("webkitfullscreenchange", checkFullscreen);
-function checkFullscreen() {
-  if (!document.fullscreenElement && !document.webkitFullscreenElement) {
-    document.getElementById("fullscreen-warning").classList.remove("hidden");
-    document.getElementById("quiz-section").classList.add("hidden");
-    questions = [];
-  }
-}
-</script>
-
+<!-- Firebase & Razorpay Scripts -->
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
 <script>
-function payNow() {
-  const options = {
-    key: "rzp_live_YourKeyHere", // 🟠 Replace this
-    amount: 14900,
-    currency: "INR",
-    name: "MeckTech Certificate",
-    description: "CS/AI-ML Certificate",
-    handler: function (response) {
-      document.getElementById("payment-section").classList.add("hidden");
-      document.getElementById("success-message").classList.remove("hidden");
-      savePaidUser();
-    },
-    prefill: {
-      name: userName,
-      email: userEmail
-    },
-    theme: {
-      color: "#03dac5"
-    }
+  // Firebase Configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyDg6hedgJB7nK3xVvIrxg04ouFVTkIHe2k",
+    authDomain: "mecktech-bbc2e.firebaseapp.com",
+    databaseURL: "https://mecktech-bbc2e-default-rtdb.firebaseio.com",
+    projectId: "mecktech-bbc2e",
+    storageBucket: "mecktech-bbc2e.firebasestorage.app",
+    messagingSenderId: "790927325648",
+    appId: "1:790927325648:web:9135f13e7dafba1f0b21d5",
+    measurementId: "G-T89V3EWMXB"
   };
-  const rzp = new Razorpay(options);
-  rzp.open();
-}
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
 
-async function savePaidUser() {
-  const token = "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"; // 🟠 Replace this
-  const repo = "mayankchavan13/MeckTech-site-admin";
-  const file = "paid_users.json";
-  const url = `https://api.github.com/repos/mayankchavan13/MeckTech-site-admin/contents/${file}`;
+  let questions = [], current = 0, score = 0;
+  let user = { name: "", email: "", address: "" };
 
-  const res = await fetch(`https://raw.githubusercontent.com/mayankchavan13/MeckTech-site-admin/main/${file}`);
-  const oldData = await res.json();
-  const updated = [...oldData, {
-    name: userName,
-    email: userEmail,
-    score: userScore
-  }];
-  const content = btoa(JSON.stringify(updated, null, 2));
+  function startTest() {
+    user.name = document.getElementById("fullName").value.trim();
+    user.email = document.getElementById("email").value.trim();
+    user.address = document.getElementById("address").value.trim();
+    if (!user.name || !user.email || !user.address) {
+      alert("Please enter all fields");
+      return;
+    }
+    document.documentElement.requestFullscreen();
+    document.getElementById("launchPage").style.display = "none";
+    document.getElementById("quizContainer").style.display = "flex";
+    loadQuestions();
+  }
 
-  let sha = "";
-  const getSHA = await fetch(url, {
-    headers: {
-      Authorization: `token ${token}`,
-      Accept: "application/vnd.github+json"
+  function loadQuestions() {
+    db.ref("questions").once("value", (snapshot) => {
+      const data = snapshot.val();
+      questions = data ? Object.values(data) : [];
+      current = 0;
+      score = 0;
+      showQuestion();
+    });
+  }
+
+  function showQuestion() {
+    if (current >= questions.length) {
+      finishTest();
+      return;
+    }
+    const q = questions[current];
+    let html = `<h3>Q${current + 1}: ${q.question}</h3>`;
+    q.options.forEach((opt, i) => {
+      html += `<div class="option" onclick="selectOption(${i})">${opt}</div>`;
+    });
+    document.getElementById("questionContainer").innerHTML = html;
+  }
+
+  function selectOption(selected) {
+    if (selected == questions[current].answer) score++;
+    current++;
+    showQuestion();
+  }
+
+  function finishTest() {
+    document.exitFullscreen?.();
+    document.getElementById("quizContainer").style.display = "none";
+    document.getElementById("resultPage").style.display = "flex";
+    document.getElementById("scoreMsg").innerText = `You scored ${score} out of ${questions.length}`;
+    if (score >= 15) {
+      document.getElementById("payButton").style.display = "block";
+    } else {
+      document.getElementById("finalMsg").innerText = "Sorry, you are not eligible for the certificate.";
+    }
+  }
+
+  function payNow() {
+    const options = {
+      key: "rzp_live_YourKeyHere", // Replace this with your Razorpay LIVE key
+      amount: 14900,
+      currency: "INR",
+      name: "MeckTech",
+      description: "Assessment Certificate",
+      handler: function (response) {
+        db.ref("paid_users").push({
+          name: user.name,
+          email: user.email,
+          score: score
+        });
+        document.getElementById("payButton").style.display = "none";
+        document.getElementById("finalMsg").innerHTML = `
+          <h3>Payment Successful!</h3>
+          <p>Your certificate will be sent to your email shortly.</p>
+          <p style="font-size:13px; color:gray;">
+            MeckTech doesn't claim any partnership with any other company.<br/>
+            This assessment is based on your personal knowledge about CS/AI-ML.<br/>
+            We hope our certificate helps you in future. All the best.
+          </p>`;
+      },
+      prefill: {
+        name: user.name,
+        email: user.email
+      }
+    };
+    new Razorpay(options).open();
+  }
+
+  // Cancel if user exits fullscreen during test
+  document.addEventListener("fullscreenchange", () => {
+    if (!document.fullscreenElement && current < questions.length) {
+      alert("Fullscreen exited. Test cancelled.");
+      location.reload();
     }
   });
-  const shaRes = await getSHA.json();
-  sha = shaRes.sha;
-
-  await fetch(url, {
-    method: "PUT",
-    headers: {
-      Authorization: `token ${token}`,
-      Accept: "application/vnd.github+json"
-    },
-    body: JSON.stringify({
-      message: "Add paid user",
-      content,
-      sha
-    })
-  });
-}
 </script>
 
 </body>
