--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   <p style="max-width:500px; text-align:center;">
     📌 This is a 20-question assessment.<br/>
     ✅ You must stay in fullscreen or the test will cancel.<br/>
-    🏆 Minimum 15 correct answers required to get a certificate.<br/>
-    💳 ₹149 payment required to receive certificate via email.
+    🏆 Minimum 15 (75%) correct answers required to get a certificate.<br/>
+    💳 you will receive certificate via email in 1-2 working days.
   </p>
   <input type="text" id="fullName" placeholder="Full Name" required />
   <input type="email" id="email" placeholder="Email Address" required />
