--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
       <p><strong>Instructions:</strong> This assessment must be taken in fullscreen. If you exit fullscreen, your test will be cancelled. You must score 15 or more out of 20 to be eligible for the certificate.</p>
       <button onclick="startAssessment()">Start Assessment</button>
     </div>
-
+     <div id="contact">
+    Contact: royalmanagement02@gmail.com
+  </div>
+</div>
     <div id="quiz" style="display: none;"></div>
     <div id="result" style="display: none;"></div>
   </div>
