--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <button onclick="startAssessment()">Start Assessment</button>
     </div>
      <div id="contact">
-    Contact: royalmanagement02@gmail.com
+     <small>Contact: royalmanagement02@gmail.com</small>
   </div>
 </div>
     <div id="quiz" style="display: none;"></div>
