--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      text-align: center;
+      text-align: right;
     }
     .container {
       max-width: 600px;
