--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
       border-radius: 8px;
       text-align: left;
     }
+    .option {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: #1a1a1a;
+      padding: 10px 15px;
+      margin: 10px 0;
+      border-radius: 6px;
+      color: white;
+      font-size: 16px;
+    }
+
+    .option input[type="radio"] {
+      transform: scale(1.3);
+   }
+
   </style>
 </head>
 <body>
@@ -120,10 +136,13 @@
       quiz.innerHTML = `
         <div class="question-box">
           <h3>Q${currentIndex + 1}: ${q.text}</h3>
-          ${q.options.map((opt, i) => `
-            <div><input type="radio" name="option" value="${i}" id="opt${i}" />
-            <label for="opt${i}">${opt}</label></div>
-          `).join("")}
+         ${q.options.map((opt, i) => `
+           <label class="option">
+             <span>${opt}</span>
+             <input type="radio" name="option" value="${i}" />
+           </label>
+         `).join("")}
+
           <button onclick="submitAnswer()">Next</button>
         </div>
       `;
