--- a/index.html
+++ b/index.html
@@ -4,64 +4,65 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MeckTech Assessment</title>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
   <style>
     body {
+      background: #0d1117;
+      color: white;
+      font-family: Arial, sans-serif;
+      text-align: center;
       margin: 0;
-      background-color: #0d1117;
-      color: #c9d1d9;
-      font-family: 'Segoe UI', sans-serif;
-      padding: 20px;
+      padding: 0;
     }
+
     .container {
-      max-width: 700px;
+      max-width: 600px;
       margin: auto;
+      padding: 30px;
     }
+
     .logo {
-      width: 130px;
+      width: 100px;
       margin-bottom: 20px;
     }
-    h1 {
-      color: #58a6ff;
-    }
-    label, input {
-      display: block;
-      margin-bottom: 10px;
-    }
-    input[type="text"], input[type="email"] {
-      width: 100%;
+
+    input, button, select {
       padding: 10px;
-      background-color: #161b22;
-      border: 1px solid #30363d;
-      color: white;
+      width: 90%;
+      margin: 10px auto;
       border-radius: 5px;
-    }
-    button {
-      padding: 10px 20px;
-      background-color: #238636;
-      color: white;
       border: none;
-      border-radius: 5px;
-      margin-top: 10px;
+      font-size: 16px;
+    }
+
+    button {
+      background: #238636;
+      color: white;
       cursor: pointer;
     }
-    .question {
-      margin-top: 20px;
+
+    .question-box {
+      margin: 30px 0;
+      text-align: left;
     }
-    .option {
-      background-color: #161b22;
-      padding: 10px;
-      border-radius: 5px;
-      margin-top: 5px;
+
+    .question-box label {
       display: flex;
       justify-content: space-between;
+      align-items: center;
+      background: #161b22;
+      margin: 10px 0;
+      padding: 10px;
+      border-radius: 5px;
     }
-    .option input {
-      margin-left: 10px;
+
+    .strike {
+      text-decoration: line-through;
+      color: #888;
+      margin-left: 5px;
     }
-    #payment-section {
-      margin-top: 30px;
+
+    #result button {
+      margin-top: 20px;
     }
   </style>
 </head>
@@ -70,23 +71,23 @@
     <img src="mecktech-logo.png" alt="MeckTech Logo" class="logo" />
     <h1>MeckTech Assessment</h1>
 
-    <div id="user-info">
-      <label>Full Name:</label>
-      <input type="text" id="name" required />
-      <label>Email:</label>
-      <input type="email" id="email" required />
-      <button onclick="startTest()">Start Assessment</button>
+    <div id="startForm">
+      <input type="text" id="fullName" placeholder="Full Name" required />
+      <input type="email" id="email" placeholder="Email Address" required />
+      <input type="text" id="address" placeholder="Address (Optional)" />
+      <button onclick="startAssessment()">Start Test</button>
     </div>
 
-    <div id="test-section" style="display:none;">
-      <div class="question" id="question-container"></div>
-      <button onclick="nextQuestion()">Next</button>
-    </div>
+    <div id="quiz" style="display:none"></div>
 
-    <div id="payment-section"></div>
+    <div id="result" style="display:none"></div>
   </div>
 
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+
   <script>
+    // Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyDg6hedgJB7nK3xVvIrxg04ouFVTkIHe2k",
       authDomain: "mecktech-bbc2e.firebaseapp.com",
@@ -94,103 +95,97 @@
       projectId: "mecktech-bbc2e",
       storageBucket: "mecktech-bbc2e.appspot.com",
       messagingSenderId: "790927325648",
-      appId: "1:790927325648:web:9135f13e7dafba1f0b21d5"
+      appId: "1:790927325648:web:9135f13e7dafba1f0b21d5",
     };
+
     firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
 
-    const questions = [
-      {
-        question: "What does HTML stand for?",
-        options: ["Hyper Text Markup Language", "High Text Machine Language", "Hyper Tabular Markup Language", "None of these"],
-        answer: 0
-      },
-      {
-        question: "Which language is used for styling web pages?",
-        options: ["HTML", "JQuery", "CSS", "XML"],
-        answer: 2
-      },
-      {
-        question: "Which is not a JavaScript Framework?",
-        options: ["Python Script", "JQuery", "Django", "NodeJS"],
-        answer: 2
-      }
-    ];
+    let userData = {};
+    let questions = [];
+    let currentIndex = 0;
+    let correctCount = 0;
 
-    let current = 0, score = 0, fullName = "", email = "";
+    function startAssessment() {
+      const name = document.getElementById("fullName").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const address = document.getElementById("address").value.trim();
+      if (!name || !email) return alert("Please fill all required fields");
 
-    function startTest() {
-      fullName = document.getElementById("name").value.trim();
-      email = document.getElementById("email").value.trim();
-      if (!fullName || !email) {
-        alert("Please enter your name and email.");
-        return;
-      }
-      document.getElementById("user-info").style.display = "none";
-      document.getElementById("test-section").style.display = "block";
-      showQuestion();
+      userData = { name, email, address };
+
+      document.getElementById("startForm").style.display = "none";
+      document.getElementById("quiz").style.display = "block";
+
+      document.documentElement.requestFullscreen();
+      loadQuestions();
+    }
+
+    function loadQuestions() {
+      db.ref("questions").once("value", snap => {
+        const data = snap.val();
+        if (!data) return alert("No questions found.");
+        questions = Object.values(data);
+        showQuestion();
+      });
     }
 
     function showQuestion() {
-      const q = questions[current];
-      const container = document.getElementById("question-container");
-      container.innerHTML = `<h3>${q.question}</h3>`;
-      q.options.forEach((opt, idx) => {
-        container.innerHTML += `
-          <div class="option">
-            <span>${opt}</span>
-            <input type="radio" name="option" value="${idx}">
-          </div>
-        `;
-      });
-    }
-
-    function nextQuestion() {
-      const selected = document.querySelector('input[name="option"]:checked');
-      if (!selected) {
-        alert("Please select an option.");
-        return;
-      }
-      if (parseInt(selected.value) === questions[current].answer) score++;
-      current++;
-      if (current < questions.length) {
-        showQuestion();
-      } else {
-        finishTest();
-      }
-    }
-
-    function finishTest() {
-      document.getElementById("test-section").style.display = "none";
-
-      firebase.database().ref("submittedUsers").push({
-        fullName,
-        email,
-        score,
-        submittedAt: new Date().toISOString()
-      });
-
-      localStorage.setItem("fullName", fullName);
-      localStorage.setItem("email", email);
-      localStorage.setItem("score", score);
-
-      document.getElementById("payment-section").innerHTML = `
-        <h2>Result: ${score}/${questions.length}</h2>
-        <p>To receive your certificate, please complete the payment below:</p>
-        <a href="https://razorpay.me/@mecktech" target="_blank">
-          <button>Pay ₹149</button>
-        </a>
-        <br/><br/>
-        <button onclick="openForm()">I’ve Paid — Fill Certificate Form</button>
+      const q = questions[currentIndex];
+      const quiz = document.getElementById("quiz");
+      quiz.innerHTML = `
+        <div class="question-box">
+          <h3>Q${currentIndex + 1}: ${q.text}</h3>
+          ${q.options.map((opt, i) => `
+            <label>
+              ${opt}
+              <input type="radio" name="option" value="${i}" />
+            </label>
+          `).join('')}
+          <button onclick="submitAnswer()">Next</button>
+        </div>
       `;
     }
 
-    function openForm() {
-      const name = encodeURIComponent(localStorage.getItem("fullName"));
-      const email = encodeURIComponent(localStorage.getItem("email"));
-      const score = encodeURIComponent(localStorage.getItem("score"));
-      const formURL = `https://docs.google.com/forms/d/e/1FAIpQLSfSKc44R0lQJls0Fok1ygRfsZfCLH_nj7OFfwZlaiS9tH-gow/viewform?usp=pp_url&entry.525457949=${name}&entry.758965619=${email}&entry.1611728617=${score}`;
-      window.open(formURL, "_blank");
+    function submitAnswer() {
+      const selected = document.querySelector('input[name="option"]:checked');
+      if (!selected) return alert("Please select an answer.");
+      const ans = parseInt(selected.value);
+      if (ans === parseInt(questions[currentIndex].correct)) correctCount++;
+      currentIndex++;
+      if (currentIndex >= questions.length) endQuiz();
+      else showQuestion();
     }
-  </script>
-</body>
-</html>
+
+    function endQuiz() {
+      document.getElementById("quiz").style.display = "none";
+      const result = document.getElementById("result");
+
+      // Save score and user to Firebase
+      db.ref("paidUsers").push({
+        name: userData.name,
+        email: userData.email,
+        score: correctCount
+      });
+
+      result.innerHTML = `
+        <h2>🎉 Congratulations!</h2>
+        <p>Result: ${correctCount}/${questions.length}</p>
+        <p>To receive your certificate, please complete the payment below:</p>
+        <button onclick="openPaymentLink()">Pay ₹149 <span class="strike">₹249</span></button>
+        <br/>
+        <button id="formBtn" onclick="openForm()" style="display:none">I've Paid — Fill Certificate Form</button>
+      `;
+      result.style.display = "block";
+    }
+
+    function openPaymentLink() {
+      window.open("https://razorpay.me/@mecktech", "_blank");
+      setTimeout(() => {
+        document.getElementById("formBtn").style.display = "inline-block";
+      }, 2000);
+    }
+
+    function openForm() {
+      const url = new URL("https://docs.google.com/forms/d/e/1FAIpQLSfSKc44R0lQJls0Fok1ygRfsZfCLH_nj7OFfwZlaiS9tH-gow/viewform");
+      url.searchParams.append("entry.525457949", u
